New Wavefront OBJ importer only imports points #103212

Closed
opened 2022-12-14 14:03:16 +01:00 by Claus · 8 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA RTX A2000 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 527.27

Blender Version
Broken: version: 3.4.0, branch: blender-v3.4-release, commit date: 2022-12-06 18:46, hash: a95bf1ac01
Worked: 3.4.0 legacy Wavefront OBJ importer

Short description of error
When importing attached file, the legacy importer imports faces correctly. The new one only imports vertices. The file is generated from this website: http://humanshape.org/head/

Exact steps for others to reproduce the error

  1. Open Blender
  2. Import attached file with new importer
  3. Import attached file with legacy importer

BioHuman_2048(2).obj

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA RTX A2000 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 527.27 **Blender Version** Broken: version: 3.4.0, branch: blender-v3.4-release, commit date: 2022-12-06 18:46, hash: `a95bf1ac01` Worked: 3.4.0 legacy Wavefront OBJ importer **Short description of error** When importing attached file, the legacy importer imports faces correctly. The new one only imports vertices. The file is generated from this website: http://humanshape.org/head/ **Exact steps for others to reproduce the error** 1. Open Blender 2. Import attached file with new importer 3. Import attached file with legacy importer [BioHuman_2048(2).obj](https://archive.blender.org/developer/F14057241/BioHuman_2048_2_.obj)
Author

Added subscriber: @Claus

Added subscriber: @Claus
Contributor

Added subscriber: @scurest

Added subscriber: @scurest
Contributor

This is basically the same as #98782, but for UVs instead of normals. The .obj has faces like f 155/1/1 154/2/2 153/3/3, but does not have any vts.

This is basically the same as #98782, but for UVs instead of normals. The .obj has faces like `f 155/1/1 154/2/2 153/3/3`, but does not have any `vt`s.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @aras_p, @PratikPB2123

Added subscribers: @aras_p, @PratikPB2123
Aras Pranckevicius self-assigned this 2023-01-01 17:48:14 +01:00

This issue was referenced by 8007f7e74f

This issue was referenced by 8007f7e74f5085693c5b5f83d3f9f19a173bab75

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

I just worked around this for Blender 3.5. Technically the file is "incorrect" - the face definitions refer to UV coordinates which simply do not exist anywhere in the file.

I just worked around this for Blender 3.5. Technically the file is "incorrect" - the face definitions refer to UV coordinates which simply do not exist anywhere in the file.
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:40:01 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-02-10 12:49:18 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103212
No description provided.